images folder add

--- a/_posts/2022-04-01-why.md
+++ b/_posts/2022-04-01-why.md
@@ -1,9 +1,10 @@
 ---
 title: Why Jekyll with GitBook
 author: jshsakura
-date: 2019-04-27
+date: 2022-04-01
 category: Jekyll
 layout: post
+order: 2
 ---
 
 GitBook is an amazing frontend style to present and organize contents (such as book chapters
