remove adsense, post edit

--- a/_posts/2022-03-01-RCM.md
+++ b/_posts/2022-03-01-RCM.md
@@ -1,29 +1,88 @@
 ---
-title: RCM 모드
+title: 3. RCM 모드 진입
 author: jshsakura
 date: 2022-03-01
-category: jshsakura
+category: cfw
 layout: post
-order: 1
+order: 7
 ---
 
+![rcmjig1.jpg](../assets/images/2022-03-01-RCM/a83bafa5d68d166a0dd934f02664d90d31075e2e.jpg)
 
-스위치는 Tegra X1 프로세서를 사용하므로 대부분의 시나리오에서 최종 사용자에게 쓸모가 없는 특수 복구 모드가 있습니다. 다행히도 fusee-gelee 취약점으로 인해 이 특수 모드는 CFW에 대한 게이트웨이 역할을 합니다.
+`RCM 모드`로 진입하기 위해 우측 `조이콘`을 분리하고 `RCM 지그(RCM JIG)`를 설치해보도록 하겠습니다.
 
-RCM(복구 모드)에 들어가는 방법 에는 여러 가지 가 있습니다 . 이들 중 가장 저렴한 것은 일반적인 가정 용품만 있으면 되는 반면 가장 믿을 수 있는 것은 매우 저렴합니다($10).
+`RCM 지그`의 설치는 전혀 어렵지 않지만 간혹 `불량` 처럼 접촉이 잘 안되는 제품들이 있으니 작동하지 않는다고 너무 당황하지 마시길 바랍니다.
 
- 
-패치된 스위치
+이경우는 지그에 달린 핀을 이쑤시개 등으로 살짝 `위로 들어주면 수리`됩니다.
 
-패치된 장치 는 RCM에 들어갈 수 있지만 해당 시스템에 페이로드를 보낼 수 없습니다. 또한 RCM은 볼륨 높이기, 볼륨 낮추기 및 전원을 길게 눌러 액세스하는 것과 다른 복구 모드입니다.
+<br>
 
-메모
+## 🧰 RCM JIG (RCM 지그) 설치하기
 
-이 페이지에서 메소드의 순서는 쉬운 순서입니다. 즉시 수행하기 가장 쉬운 방법이 상단에 나열되고 가장 고급/어려운 방법이 하단에 나열됩니다.
+![rcmjig2.jpg](../assets/images/2022-03-01-RCM/0662e1b1e8e58361f23775120bcc3b89928a6f91.jpg)
 
- 
+우측의 `조이콘 레일`을 따라 쭈욱~ 지그를 살살 밀어줍니다.
 
-지침
-스위치의 전원을 끄고 아래 나열된 방법 중 하나를 사용하여 오른쪽 조이콘 레일의 핀을 단락시키십시오.
-볼륨 크게를 누른 상태에서 전원 버튼을 누릅니다.
-스위치에 Nintendo 로고가 표시되고 정상적으로 부팅되거나 즉시 종료되는 경우 RCM에 성공적으로 진입하지 못한 것이므로 다시 시도해야 합니다. 그렇지 않고 콘솔이 정상적으로 켜지지 않고 화면이 백라이트 없이 검은색으로 남아 있으면 스위치가 RCM에 있는 것입니다.
+스위치 조이콘을 장착하는 방식과 완전히 `동일`합니다.
+
+<br>
+
+
+
+![rcmjig3.jpg](../assets/images/2022-03-01-RCM/67f3e921edf35aaa3c9b7182dcdffbaf5a918759.jpg)
+
+끝까지 밀어넣어 주시면 되는데 이때 너무 꽉 끼도록 누르지 않으셔도 됩니다.
+
+작은 핀 두개로 우측 조이콘 레일 단자에 `접촉`해서 `쇼트`만 내주는 역할이기 때문에 너무 꽉꽉 넣으면 반대로 느슨해지는 수가 있습니다.
+
+<br>
+
+
+
+![rcmjig4.png](../assets/images/2022-03-01-RCM/1653d2df2f389d3f1d7241adab2dabbdadfbb3c7.png)
+
+`RCM 모드`로 진입하기 위해서는`볼륨 +`를 누른채로 전원버튼을 `1초` 정도 눌러주면 쉽게 진입이 가능합니다.
+
+일반적인 스마트폰의 `복구모드` 진입과 `유사`하다고 이해하시면 편합니다.
+
+<br>
+
+
+
+![rcmjig5.jpg](../assets/images/2022-03-01-RCM/129d661b22f9d481bd04f0d896498974bfdb88dc.jpg)
+
+먼저 `볼륨 +` 버튼을 꾹 누르고 계신 채로 전원버튼을 살짝 `1초` 정도 눌러줍니다.
+
+무언가 소리가 난다거나 특별한 변화가 생기진 않기 때문에 `RCM 모드`에 들어간 것인지 만건지 어리둥절 하실 수 있습니다.
+
+<br>
+
+
+
+![rcmjig6.jpg](../assets/images/2022-03-01-RCM/876f4284fd61f8949b4e8c4b745608f2f0f392da.jpg)
+
+사실 이렇게 기기는 겉으로 보기에는 전혀 변화가 없습니다.
+
+마치 꺼져있는것처럼 보이는데, 실제로는 화면만 안들어 왔을뿐 이미 `복구모드`에 들어가 있는 상황입니다.
+
+<br>
+
+
+
+![rcmjig7.jpg](../assets/images/2022-03-01-RCM/a104a4e05756a2f679a7a4a0fa9ebe5f78c44d26.jpg)
+
+제대로 `RCM 모드`로 부팅이 되었는지 `PC`와 `USB C 타입 케이블`을 연결해보는 것으로 정확하게 `확인`이 가능합니다.
+
+케이블을 연결하자 마자 PC에서는 장치가 연결되는 연결음이 `딩동댕~` 📢 하고 들리게 됩니다.
+
+<br>
+
+
+
+![rcmjig8.png](../assets/images/2022-03-01-RCM/81903b9c0b94328c32eddef744509abdc94bee9e.png)
+
+위 `RCM 모드` 상에서 PC에 `TegraRcmGUI` 같은 유틸리티를 실행해보면 `RCM O.K` 라는 `RCM 모드` 진입 성공 메세지가 나타납니다.
+
+`RCM 모드`에 진입하는 것에 성공했다면 `자신감`을 좀 더 가지셔도 좋습니다.👍
+
+다음은 위 사진의 `TegraRcmGUI` 를 설치하고 실제로 `아트모스피어`의 `페이로드`파일을 주입하기 위한 과정을 진행하겠습니다.
