--- a/_posts/2022-02-01-Airplane.md
+++ b/_posts/2022-02-01-Airplane.md
@@ -21,7 +21,7 @@ order: 5
 
 <br>
 
-### 🛫 비행기 모드 진입
+### 2-1. 🛫 비행기 모드 진입
 
 ![airmode1.png](../assets/images/2022-02-01-Airplane/230afb2828df1977d01b63a170c82aec6d45a597.png)
 
@@ -37,7 +37,7 @@ order: 5
 
 > 물론 `비행기 모드` 🛬 는 `권장사항`으로 반드시 진행해야 하는 것은 아니며, 만약 실수로 누락 되었다고 해서 부팅 후 즉시 `밴`을 당하거나 하진 않을테니 너무 걱정은 마세요. 😊
 
-### 🚫 게임 카트리지 제거
+### 2-2. 🚫 게임 카트리지 제거
 
 ![cart_remove.jpg](../assets/images/2022-02-01-Airplane/64458216688724399e76a95eae80329c528b26ef.jpg)
 
@@ -47,7 +47,7 @@ order: 5
 
 <br>
 
-### 💾 SD 카드 분리
+### 2-3. 💾 SD 카드 분리
 
 ![pwoff1.jpg](../assets/images/2022-02-01-Airplane/84f43a1003da9e42b797733320c2b81c4618151e.jpg)
 
