--- a/_posts/2022-03-01-RCM.md
+++ b/_posts/2022-03-01-RCM.md
@@ -1,10 +1,11 @@
 ---
-title: 3. RCM 모드 진입
+title: 4. RCM 모드 진입
 author: jshsakura
 date: 2022-03-01
 category: cfw
 layout: post
 order: 7
+
 ---
 
 ![rcmjig1.jpg](../assets/images/2022-03-01-RCM/a83bafa5d68d166a0dd934f02664d90d31075e2e.jpg)
@@ -17,7 +18,7 @@ order: 7
 
 <br>
 
-## 🧰 RCM JIG (RCM 지그) 설치하기
+### 4-1. 🧰 RCM JIG (RCM 지그) 설치하기
 
 ![rcmjig2.jpg](../assets/images/2022-03-01-RCM/0662e1b1e8e58361f23775120bcc3b89928a6f91.jpg)
 
@@ -27,8 +28,6 @@ order: 7
 
 <br>
 
-
-
 ![rcmjig3.jpg](../assets/images/2022-03-01-RCM/67f3e921edf35aaa3c9b7182dcdffbaf5a918759.jpg)
 
 끝까지 밀어넣어 주시면 되는데 이때 너무 꽉 끼도록 누르지 않으셔도 됩니다.
@@ -36,8 +35,6 @@ order: 7
 작은 핀 두개로 우측 조이콘 레일 단자에 `접촉`해서 `쇼트`만 내주는 역할이기 때문에 너무 꽉꽉 넣으면 반대로 느슨해지는 수가 있습니다.
 
 <br>
-
-
 
 ![rcmjig4.png](../assets/images/2022-03-01-RCM/1653d2df2f389d3f1d7241adab2dabbdadfbb3c7.png)
 
@@ -47,8 +44,6 @@ order: 7
 
 <br>
 
-
-
 ![rcmjig5.jpg](../assets/images/2022-03-01-RCM/129d661b22f9d481bd04f0d896498974bfdb88dc.jpg)
 
 먼저 `볼륨 +` 버튼을 꾹 누르고 계신 채로 전원버튼을 살짝 `1초` 정도 눌러줍니다.
@@ -57,7 +52,7 @@ order: 7
 
 <br>
 
-
+### 4-2. 🖥 PC와 연결해서 RCM 모드 확인
 
 ![rcmjig6.jpg](../assets/images/2022-03-01-RCM/876f4284fd61f8949b4e8c4b745608f2f0f392da.jpg)
 
@@ -67,22 +62,26 @@ order: 7
 
 <br>
 
-
-
 ![rcmjig7.jpg](../assets/images/2022-03-01-RCM/a104a4e05756a2f679a7a4a0fa9ebe5f78c44d26.jpg)
 
 제대로 `RCM 모드`로 부팅이 되었는지 `PC`와 `USB C 타입 케이블`을 연결해보는 것으로 정확하게 `확인`이 가능합니다.
 
 케이블을 연결하자 마자 PC에서는 장치가 연결되는 연결음이 `딩동댕~` 📢 하고 들리게 됩니다.
 
+위 `RCM 모드`를 벗어나는 방법은 `12초`간 `전원` 키를 길게 눌러 기기를 `강제종료`하는 방법 뿐입니다.
+
+스위치의 `전원`을 `종료` 해주세요.
+
 <br>
 
-
+### 4-3. (부록) TegraRcmGUI에서 RCM 모드 확인
 
 ![rcmjig8.png](../assets/images/2022-03-01-RCM/81903b9c0b94328c32eddef744509abdc94bee9e.png)
 
-위 `RCM 모드` 상에서 PC에 `TegraRcmGUI` 같은 유틸리티를 실행해보면 `RCM O.K` 라는 `RCM 모드` 진입 성공 메세지가 나타납니다.
+참고로 위 `RCM 모드` 상에서 PC에 `TegraRcmGUI` 같은 유틸리티를 실행해보면 `RCM O.K` 라는 `RCM 모드` 진입 성공 메세지가 나타납니다.
 
 `RCM 모드`에 진입하는 것에 성공했다면 `자신감`을 좀 더 가지셔도 좋습니다.👍
 
-다음은 위 사진의 `TegraRcmGUI` 를 설치하고 실제로 `아트모스피어`의 `페이로드`파일을 주입하기 위한 과정을 진행하겠습니다.
+<br>
+
+RCM 모드 진입까지 문제가 없었으니 기기의 전원을 끄고 다음 과정에서 위 사진의 `TegraRcmGUI` 를 설치하고 실제로 `아트모스피어`의 `페이로드`파일을 주입하기 위한 과정을 진행하겠습니다.
