--- a/_posts/2022-02-01-Airplane.md
+++ b/_posts/2022-02-01-Airplane.md
@@ -1,5 +1,5 @@
 ---
-title: 2. 작업전 준비사항
+title: 2. 작업전 스위치 준비과정
 author: jshsakura
 date: 2022-02-01
 category: cfw
@@ -9,15 +9,19 @@ order: 5
 
 ![IMG_0260.JPG](../assets/images/2022-02-01-Airplane/ec06c7435869b60a59dedd85f70a5eb0869adce9.JPG)
 
-먼저 스위치의 전원을 켜고 정펌으로 부팅해줍니다.
+먼저 스위치가 정상적으로 정펌(정식 펌웨어)으로 부팅이 가능해야합니다.
+
+전원을 켜고 `정펌`으로 부팅해줍니다.
 
 <br>
 
 ![IMG_0261.JPG](../assets/images/2022-02-01-Airplane/e4b924c30bd516b231eec4c5f60977be8c2d4453.JPG)
 
-부팅이 완료되면 비행기모드로 진입하도록 하겠습니다.
+정펌으로 부팅이 완료되면 스위치를 비행기모드 상태로 변경하도록 하겠습니다.
 
-<br>
+
+
+이는 혹시 모를 사고를 방지하기 위한 최소한의 조치이니 반드시 따라와주세요. 😭
 
 <br>
 
@@ -35,15 +39,17 @@ order: 5
 
 <br>
 
-> 물론 `비행기 모드` 🛬 는 `권장사항`으로 반드시 진행해야 하는 것은 아니며, 만약 실수로 누락 되었다고 해서 부팅 후 즉시 `밴`을 당하거나 하진 않을테니 너무 걱정은 마세요. 😊
+> 물론 `비행기 모드` 🛬 는 `권장사항`으로 반드시 진행해야 하는 것은 아니며, 만약 실수로 누락 되었다고 해서 부팅 후 즉시 `밴`을 당해버리거나 하진 않을테니 빠뜨렸다고 너무 큰 걱정은 마세요. 😊
+
+<br>
 
 ### 2-2. 🚫 게임 카트리지 제거
 
 ![cart_remove.jpg](../assets/images/2022-02-01-Airplane/64458216688724399e76a95eae80329c528b26ef.jpg)
 
-커펌 과정 중에 게임 카트리지가 장착된 경우 슬롯버전 오류가 일어나는 경우가 존재합니다.
+커펌 과정 중에 기존에 커펌이 되어 있던 기기라면, 게임 카트리지가 장착된 경우 카트리지 내 저장된 버전 정보로 인해 오류가 일어나는 경우가 발생합니다.
 
-일단 혹시 모르니 아예 분리하고 진행하도록 하겠습니다.
+이는 커스텀 펌웨어 설치를 진행하면서 배우게될 noGC 옵션을 통해 해결이 가능하지만, 아직은 정확한 원인을 알 수 없으실 상태이니 게임 카트리지를 본체에서 먼저 분리하고 진행하도록 하겠습니다.
 
 <br>
 
@@ -51,7 +57,11 @@ order: 5
 
 ![pwoff1.jpg](../assets/images/2022-02-01-Airplane/84f43a1003da9e42b797733320c2b81c4618151e.jpg)
 
-슬립 버튼을 길게 눌러 전원을 완전히 종료해줍니다.
+스위치의 커스텀 펌웨어는 모두 `SD 카드` 내 설치할 예정입니다.
+
+따라서 `SD 카드`에 접근이 가능해야 하니 먼저 기기에서 `분리`해줄 필요가 있습니다.
+
+`전원(슬립)` 버튼을 길게 눌러 전원을 완전히 `종료`해줍니다.
 
 <br>
 
